--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -3,6 +3,9 @@ name: Build
 on: [push, pull_request]
 
 jobs:
+  build-linux:
+    strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
@@ -255,146 +258,4 @@ jobs:
         path: |
           build\src\FIRESTARTER_CUDA.exe
           build\src\libhwloc-15.dll
-
-  create-download:
-    name: Create download for Website
-    runs-on: ubuntu-latest
-    needs: [build-linux, build-macos, build-windows]
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: '0'
-        path: 'sources'
-    - name: Checkout submodules
-      run: |
-        cd sources
-        git submodule update --init --recursive
-    - name: Create Build directory
-      run: |
-        mkdir build
-    # Linux
-    - name: Retrieve FIRESTARTER-linux 
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER-linux
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER FIRESTARTER-linux
-        rm -rf FIRESTARTER
-        chmod +x FIRESTARTER-linux
-    # Linux CUDA 8.0
-    - name: Retrieve FIRESTARTER_CUDA_8.0-linux 
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER_CUDA_8.0-linux
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER_CUDA FIRESTARTER_CUDA_8.0
-        rm -rf FIRESTARTER
-        chmod +x FIRESTARTER_CUDA_8.0
-    # Linux CUDA 11.0
-    - name: Retrieve FIRESTARTER_CUDA_11.0-linux 
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER_CUDA_11.0-linux
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER_CUDA FIRESTARTER_CUDA_11.0
-        rm -rf FIRESTARTER
-        chmod +x FIRESTARTER_CUDA_11.0
-    # Linux CUDA HPC
-    - name: Retrieve FIRESTARTER_CUDA_NVHPC-22.5-linux 
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER_CUDA_NVHPC-22.5-linux
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER_CUDA FIRESTARTER_CUDA_NVHPC-22.5
-        rm -rf FIRESTARTER
-        chmod +x FIRESTARTER_CUDA_NVHPC-22.5
-    # Linux OneAPI
-    - name: Retrieve FIRESTARTER_ONEAPI_2024.0-linux 
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER_ONEAPI_2024.0-linux
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER_ONEAPI FIRESTARTER_ONEAPI_2024.0
-        rm -rf FIRESTARTER
-        chmod +x FIRESTARTER_ONEAPI_2024.0
-    - name: Retrieve FIRESTARTER_ONEAPI_2023.2.0-linux 
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER_ONEAPI_2023.2.0-linux
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER_ONEAPI FIRESTARTER_ONEAPI_2023.2.0
-        rm -rf FIRESTARTER
-        chmod +x FIRESTARTER_ONEAPI_2023.2.0
-    # OSX 11.0
-    #- name: Retrieve FIRESTARTER-macOS_11.0
-    #  uses: actions/download-artifact@v2
-    #  with:
-    #    name: FIRESTARTER-macOS_11.0
-    #    path: FIRESTARTER
-    #- name: Move binary to right directory
-    #  run: |
-    #    mv FIRESTARTER/FIRESTARTER ../FIRESTARTER-macOS_11.0
-    #    rm -rf FIRESTARTER
-    #    chmod +x ../FIRESTARTER-macOS_11.0
-    # OSX 10.15
-    - name: Retrieve FIRESTARTER-macOS_11
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER-macOS_11
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER FIRESTARTER-macOS_11
-        rm -rf FIRESTARTER
-        chmod +x FIRESTARTER-macOS_11
-    - name: Retrieve FIRESTARTER-macOS_12
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER-macOS_12
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER FIRESTARTER-macOS_12
-        rm -rf FIRESTARTER
-        chmod +x FIRESTARTER-macOS_12
-    # Windows
-    - name: Retrieve FIRESTARTER-windows
-      uses: actions/download-artifact@v2
-      with:
-        name: FIRESTARTER-windows
-        path: FIRESTARTER
-    - name: Move binary to right directory
-      run: |
-        mv FIRESTARTER/FIRESTARTER.exe FIRESTARTER-windows.exe
-        mv FIRESTARTER/libhwloc-15.dll libhwloc-15.dll
-        rm -rf FIRESTARTER
-    # Create tar.gz
-    - name: Copy CHANGELOG, README and LICENSE
-      run: |
-        grep -v '\$\$' < sources/CHANGELOG > CHANGELOG
-        cat sources/README.md | tail -n +3 > README.md
-        cp sources/LICENSE LICENSE
-        cp sources/3rd-party-licenses . -r
-        cp sources/examples . -r
-    - name: Create tar.gz
-      run: |
-        mv FIRESTARTER-linux FIRESTARTER
-        rm -rf sources/.git*
-        tar -cvzf FIRESTARTER.tar.gz CHANGELOG README.md LICENSE libhwloc-15.dll 3rd-party-licenses examples sources FIRESTARTER*
-    - uses: actions/upload-artifact@v2
-      with:
-        name: FIRESTARTER.tar.gz
-        path: FIRESTARTER.tar.gz
 
