--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5']
+        CUDA: ['0', '8.0', '11.0', 'NVHPC-22.5', 'NVHPC-23.7']
         ONEAPI: ['0', '2023.2.0', '2024.0']
 
     runs-on: ${{ matrix.os }}
@@ -120,8 +120,8 @@ jobs:
         NVARCH=`uname -s`_`uname -m`; export NVARCH
         PATH=$CUDA_ROOT/$NVARCH/23.7/compilers/bin:$PATH; export PATH
         LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/23.7/compilers/lib:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/23.7/cuda/11.7/lib64:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/23.7/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/23.7/cuda/12.2/lib64:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/23.7/cuda/12.2/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
 
         cd build
         cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"$CUDA_ROOT/$NVARCH/23.7/cuda/12.2/lib64/stubs" -LA ..
