--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,17 +15,17 @@ jobs:
             df
             wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda_8.0.61_375.26_linux-run
             wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/patches/2/cuda_8.0.61.2_linux-run
-            sudo sh cuda_8.0.61_375.26_linux-run --extract=${CUDA_ROOT}${{ matrix.CUDA }}
-            sudo sh ${CUDA_ROOT}${{ matrix.CUDA }}/cuda-linux64-rel-8.0.61-21551265.run --tar mxvf -C ${CUDA_ROOT}${{ matrix.CUDA }}
-            sudo sh cuda_8.0.61.2_linux-run --accept-eula --silent --installdir=${CUDA_ROOT}${{ matrix.CUDA }}
+            sudo sh cuda_8.0.61_375.26_linux-run --extract=${CUDA_ROOT}8.0
+            sudo sh ${CUDA_ROOT}8.0/cuda-linux64-rel-8.0.61-21551265.run --tar mxvf -C ${CUDA_ROOT}8.0
+            sudo sh cuda_8.0.61.2_linux-run --accept-eula --silent --installdir=${CUDA_ROOT}8.0
             rm cuda_8.0.61_375.26_linux-run
             rm cuda_8.0.61.2_linux-run
-            sudo rm ${CUDA_ROOT}${{ matrix.CUDA }}/cuda-linux64-rel-8.0.61-21551265.run
+            sudo rm ${CUDA_ROOT}8.0/cuda-linux64-rel-8.0.61-21551265.run
     - name: Install CUDA 11.0
       run: |
             df
             wget https://developer.download.nvidia.com/compute/cuda/11.0.3/local_installers/cuda_11.0.3_450.51.06_linux.run
-            sudo sh cuda_11.0.3_450.51.06_linux.run --toolkit --toolkitpath=${CUDA_ROOT}${{ matrix.CUDA }} --override --silent
+            sudo sh cuda_11.0.3_450.51.06_linux.run --toolkit --toolkitpath=${CUDA_ROOT}11.0 --override --silent
             rm cuda_11.0.3_450.51.06_linux.run
 #    - name: Install CUDA NVHPC-22.5
 #      run: |
@@ -40,7 +40,138 @@ jobs:
 #            echo "remove installer"
 #            rm -rf nvhpc_2022_225_Linux_x86_64_cuda_11.7
 
-  install-oneapi:
+
+  build-linux-cuda:
+
+    needs: ['install-cuda']
+    
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-20.04]
+        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
+        CUDA: ['0', '8.0', '11.0']
+
+    runs-on: ${{ matrix.os }}
+
+    env:
+      CUDA_ROOT: '/usr/local/cuda'
+
+    steps:
+      - name: Install g++-7 (if needed)
+        if: matrix.compiler == 'g++-7'
+        run: |
+          sudo apt install g++-7
+      - name: Install g++-8 (if needed)
+        if: matrix.compiler == 'g++-8'
+        run: |
+          sudo apt install g++-8
+      - name: Install clang++-8 (if needed)
+        if: matrix.compiler == 'clang++-8'
+        run: |
+          sudo apt install clang-8
+      - name: Install clang++-9 (if needed)
+        if: matrix.compiler == 'clang++-9'
+        run: |
+          sudo apt install clang-9
+      - name: Install clang++-10 (if needed)
+        if: matrix.compiler == 'clang++-10'
+        run: |
+          sudo apt install clang-10
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
+      - name: Create build directory
+        run: |
+          mkdir build
+      - name: Run CMake configure (default)
+        if: matrix.CUDA == '0'
+        env:
+          CXX: ${{ matrix.compiler }}
+        run: |
+          cd build
+          cmake ..
+      - name: Run CMake configure (CUDA)
+        if: matrix.CUDA != '0' && matrix.CUDA != 'NVHPC-22.5'
+        env:
+          CXX: ${{ matrix.compiler }}
+        run: |
+          export CPATH=${CUDA_ROOT}${{ matrix.CUDA }}/include:${CPATH}
+          export LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs:${LD_LIBRARY_PATH}
+          export LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs:${LIBRARY_PATH}
+          export CUDA_LIB_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs
+          export PATH=${CUDA_ROOT}${{ matrix.CUDA }}:${PATH}
+          export CUDA_HOME=${CUDA_ROOT}${{ matrix.CUDA }}
+          export CUDA_PATH=${CUDA_ROOT}${{ matrix.CUDA }}
+          export CUDAToolkit_ROOT=${CUDA_ROOT}${{ matrix.CUDA }}
+  
+          cd build
+          cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}${{ matrix.CUDA }}/lib64/stubs/" ..
+      - name: Run CMake configure (CUDA with NVHPC)
+        if: matrix.CUDA == 'NVHPC-22.5'
+        env:
+          CXX: ${{ matrix.compiler }}
+        run: |
+          NVARCH=`uname -s`_`uname -m`; export NVARCH
+          PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/compilers/bin:$PATH; export PATH
+          LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/compilers/lib:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+          LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/cuda/11.7/lib64:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+          LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+  
+          cd build
+          cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/cuda/11.7/lib64/stubs" -LA ..
+      - name: Build (default, CUDA)
+        run: |
+          cd build
+          make -j2
+      - name: Strip binary (default)
+        if: matrix.CUDA == '0'
+        run: |
+          cd build
+          strip src/FIRESTARTER
+      - name: Strip binary (CUDA)
+        if: matrix.CUDA != '0'
+        run: |
+          cd build
+          strip src/FIRESTARTER_CUDA
+      - name: Test FIRESTARTER (default)
+        if: matrix.CUDA == '0'
+        run: ./build/src/FIRESTARTER -t 1
+      - uses: actions/upload-artifact@v4
+        if: matrix.compiler == 'g++-10' && matrix.CUDA == '0'
+        with:
+          name: FIRESTARTER-linux
+          path: build/src/FIRESTARTER
+      - uses: actions/upload-artifact@v4
+        if: matrix.compiler == 'g++-10' && matrix.CUDA != '0'
+        with:
+          name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
+          path: build/src/FIRESTARTER_CUDA
+
+  uninstall-cuda:
+    
+    needs: ['build-linux-cuda']
+
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-20.04]
+
+    runs-on: ${{ matrix.os }}
+
+    env:
+      CUDA_ROOT: '/usr/local/cuda'
+
+    steps:
+    - name: Delete CUDA stuff
+      run: |
+        sudo rm -rf ${CUDA_ROOT}
+    install-oneapi:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
@@ -55,16 +186,31 @@ jobs:
         sudo apt install intel-basekit-${{ matrix.ONEAPI }}
 #        sudo apt install intel-oneapi-compiler-dpcpp-cpp-${{ matrix.ONEAPI }} intel-oneapi-mkl-${{ matrix.ONEAPI }} intel-oneapi-common-vars
 
-  build-linux:
+  install-oneapi:
+    needs: ['uninstall-cuda']
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        ONEAPI: ['2023.2.0', '2024.0']
+
+    steps:
+    - name: Install OneAPI Base-Toolkit (if needed)
+      run: |
+        wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
+        echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+        sudo apt update
+        sudo apt install intel-basekit-${{ matrix.ONEAPI }}
+#        sudo apt install intel-oneapi-compiler-dpcpp-cpp-${{ matrix.ONEAPI }} intel-oneapi-mkl-${{ matrix.ONEAPI }} intel-oneapi-common-vars
+
+  build-linux-oneapi:
     
-    needs: ['install-cuda', 'install-oneapi']
+    needs: ['install-oneapi']
 
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
         compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '8.0', '11.0']
         ONEAPI: ['0', '2023.2.0', '2024.0']
 
     runs-on: ${{ matrix.os }}
@@ -104,50 +250,14 @@ jobs:
     - name: Create build directory
       run: |
         mkdir build
-    - name: Run CMake configure (default)
-      if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
-      env:
-        CXX: ${{ matrix.compiler }}
-      run: |
-        cd build
-        cmake ..
-    - name: Run CMake configure (CUDA)
-      if: matrix.CUDA != '0' && matrix.CUDA != 'NVHPC-22.5' && matrix.ONEAPI == '0'
-      env:
-        CXX: ${{ matrix.compiler }}
-      run: |
-        export CPATH=${CUDA_ROOT}${{ matrix.CUDA }}/include:${CPATH}
-        export LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs:${LD_LIBRARY_PATH}
-        export LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs:${LIBRARY_PATH}
-        export CUDA_LIB_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs
-        export PATH=${CUDA_ROOT}${{ matrix.CUDA }}:${PATH}
-        export CUDA_HOME=${CUDA_ROOT}${{ matrix.CUDA }}
-        export CUDA_PATH=${CUDA_ROOT}${{ matrix.CUDA }}
-        export CUDAToolkit_ROOT=${CUDA_ROOT}${{ matrix.CUDA }}
-
-        cd build
-        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}${{ matrix.CUDA }}/lib64/stubs/" ..
-    - name: Run CMake configure (CUDA with NVHPC)
-      if: matrix.CUDA == 'NVHPC-22.5' && matrix.ONEAPI == '0'
-      env:
-        CXX: ${{ matrix.compiler }}
-      run: |
-        NVARCH=`uname -s`_`uname -m`; export NVARCH
-        PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/compilers/bin:$PATH; export PATH
-        LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/compilers/lib:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-        LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/cuda/11.7/lib64:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-        LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-
-        cd build
-        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/cuda/11.7/lib64/stubs" -LA ..
     - name: Run CMake configure (OneAPI 2023.2.0)
-      if: matrix.CUDA == '0' && matrix.ONEAPI =='2023.2.0'
+      if: matrix.ONEAPI =='2023.2.0'
       run: |
         . /opt/intel/oneapi/setvars.sh
         cd build
         cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_ONEAPI" ..
     - name: Run CMake configure (OneAPI 2024.0)
-      if: matrix.CUDA == '0' && matrix.ONEAPI =='2024.0'
+      if: matrix.ONEAPI =='2024.0'
       run: |
         . /opt/intel/oneapi/${{ matrix.ONEAPI }}/oneapi-vars.sh
         cd build
@@ -158,47 +268,24 @@ jobs:
         cd build
         make -j2
     - name: Build (OneAPI 2023.2.0)
-      if: matrix.CUDA == '0' && matrix.ONEAPI =='2023.2.0'
+      if: matrix.ONEAPI =='2023.2.0'
       run: |
         . /opt/intel/oneapi/setvars.sh
         cd build
         make -j2
     - name: Build (OneAPI 2024.0)
-      if: matrix.CUDA == '0' && matrix.ONEAPI =='2024.0'
+      if: matrix.ONEAPI =='2024.0'
       run: |
         . /opt/intel/oneapi/${{ matrix.ONEAPI }}/oneapi-vars.sh
         cd build
         make -j2
-    - name: Strip binary (default)
-      if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
-      run: |
-        cd build
-        strip src/FIRESTARTER
-    - name: Strip binary (CUDA)
-      if: matrix.CUDA != '0' && matrix.ONEAPI == '0'
-      run: |
-        cd build
-        strip src/FIRESTARTER_CUDA
     - name: Strip binary (OneAPI)
-      if: matrix.ONEAPI != '0' && matrix.CUDA == '0'
+      if: matrix.ONEAPI != '0'
       run: |
         cd build
         strip src/FIRESTARTER_ONEAPI
-    - name: Test FIRESTARTER (default)
-      if: matrix.CUDA == '0' && matrix.ONEAPI == '0'
-      run: ./build/src/FIRESTARTER -t 1
     - uses: actions/upload-artifact@v4
-      if: matrix.compiler == 'clang++-10' && matrix.CUDA == '0' && matrix.ONEAPI == '0'
-      with:
-        name: FIRESTARTER-linux
-        path: build/src/FIRESTARTER
-    - uses: actions/upload-artifact@v4
-      if: matrix.compiler == 'clang++-10' && matrix.CUDA != '0' && matrix.ONEAPI == '0'
-      with:
-        name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
-        path: build/src/FIRESTARTER_CUDA
-    - uses: actions/upload-artifact@v4
-      if: matrix.compiler == 'clang++-10' && matrix.CUDA == '0' && matrix.ONEAPI != '0'
+      if: matrix.compiler == 'g++-10' && matrix.ONEAPI != '0'
       with:
         name: FIRESTARTER_ONEAPI_${{ matrix.ONEAPI }}-linux
         path: build/src/FIRESTARTER_ONEAPI
