--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -3,208 +3,13 @@ name: Build
 on: [push, pull_request]
 
 jobs:
-
-  install-cuda:
-    runs-on: ubuntu-20.04
-    env:
-      CUDA_ROOT: '/usr/local/cuda'
-
-    steps:
-    - name: Install CUDA 8.0 (if needed)
-      run: |
-            df
-            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda_8.0.61_375.26_linux-run
-            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/patches/2/cuda_8.0.61.2_linux-run
-            sudo sh cuda_8.0.61_375.26_linux-run --extract=${CUDA_ROOT}8.0
-            sudo sh ${CUDA_ROOT}8.0/cuda-linux64-rel-8.0.61-21551265.run --tar mxvf -C ${CUDA_ROOT}8.0
-            sudo sh cuda_8.0.61.2_linux-run --accept-eula --silent --installdir=${CUDA_ROOT}8.0
-            rm cuda_8.0.61_375.26_linux-run
-            rm cuda_8.0.61.2_linux-run
-            sudo rm ${CUDA_ROOT}8.0/cuda-linux64-rel-8.0.61-21551265.run
-            sudo ls ${CUDA_ROOT}8.0/
-            sudo ls ${CUDA_ROOT}8.0/bin/
- #   - name: Install CUDA 11.0
- #     run: |
- #           df
- #           wget https://developer.download.nvidia.com/compute/cuda/11.0.3/local_installers/cuda_11.0.3_450.51.06_linux.run
- #           sudo sh cuda_11.0.3_450.51.06_linux.run --toolkit --toolkitpath=${CUDA_ROOT}11.0 --override --silent
- #           rm cuda_11.0.3_450.51.06_linux.run
- #           sudo ls ${CUDA_ROOT}11.0/
-#    - name: Install CUDA NVHPC-22.5
-#      run: |
-#            df
-#            wget https://developer.download.nvidia.com/hpc-sdk/22.5/nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-#            echo "extract"
-#            tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-#            echo "remove tar gz"
-#            rm nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
-#            echo "install"
-#            sudo NVHPC_SILENT="true" NVHPC_INSTALL_DIR="${CUDA_ROOT}${{ matrix.CUDA }}" NVHPC_INSTALL_TYPE="single" ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
-#            echo "remove installer"
-#            rm -rf nvhpc_2022_225_Linux_x86_64_cuda_11.7
-
-
-  build-linux-cuda:
-
-    needs: ['install-cuda']
-    
-    strategy:
-#      fail-fast: false
-      matrix:
-        os: [ubuntu-20.04]
-        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        CUDA: ['0', '8.0']
-
-    runs-on: ${{ matrix.os }}
-
-    env:
-      CUDA_ROOT: '/usr/local/cuda'
-
-    steps:
-      - name: Install g++-7 (if needed)
-        if: matrix.compiler == 'g++-7'
-        run: |
-          sudo apt install g++-7
-      - name: Install g++-8 (if needed)
-        if: matrix.compiler == 'g++-8'
-        run: |
-          sudo apt install g++-8
-      - name: Install clang++-8 (if needed)
-        if: matrix.compiler == 'clang++-8'
-        run: |
-          sudo apt install clang-8
-      - name: Install clang++-9 (if needed)
-        if: matrix.compiler == 'clang++-9'
-        run: |
-          sudo apt install clang-9
-      - name: Install clang++-10 (if needed)
-        if: matrix.compiler == 'clang++-10'
-        run: |
-          sudo apt install clang-10
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: '0'
-      - name: Create build directory
-        run: |
-          mkdir build
-      - name: Run CMake configure (default)
-        if: matrix.CUDA == '0'
-        env:
-          CXX: ${{ matrix.compiler }}
-        run: |
-          cd build
-          cmake ..
-      - name: Run CMake configure (CUDA)
-        if: matrix.CUDA != '0' && matrix.CUDA != 'NVHPC-22.5'
-        env:
-          CXX: ${{ matrix.compiler }}
-        run: |
-          export CPATH=${CUDA_ROOT}${{ matrix.CUDA }}/include:${CPATH}
-          export LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs:${LD_LIBRARY_PATH}
-          export LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs:${LIBRARY_PATH}
-          export CUDA_LIB_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/lib64:${CUDA_ROOT}/lib64/stubs
-          export PATH=${CUDA_ROOT}${{ matrix.CUDA }}/bin:${PATH}
-          export CUDA_HOME=${CUDA_ROOT}${{ matrix.CUDA }}
-          export CUDA_PATH=${CUDA_ROOT}${{ matrix.CUDA }}
-          export CUDAToolkit_ROOT=${CUDA_ROOT}${{ matrix.CUDA }}/bin
-          export CUDA_BIN_PATH=${CUDA_ROOT}${{ matrix.CUDA }}
-
-          ls ${CUDA_ROOT}${{ matrix.CUDA }}
-          ls ${CUDA_ROOT}${{ matrix.CUDA }}/bin
-  
-          cd build
-          cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda${{ matrix.CUDA }} -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}${{ matrix.CUDA }}/lib64/stubs/" ..
-      - name: Run CMake configure (CUDA with NVHPC)
-        if: matrix.CUDA == 'NVHPC-22.5'
-        env:
-          CXX: ${{ matrix.compiler }}
-        run: |
-          NVARCH=`uname -s`_`uname -m`; export NVARCH
-          PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/compilers/bin:$PATH; export PATH
-          LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/compilers/lib:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-          LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/cuda/11.7/lib64:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-          LD_LIBRARY_PATH=${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
-  
-          cd build
-          cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"${CUDA_ROOT}${{ matrix.CUDA }}/${NVARCH}/22.5/cuda/11.7/lib64/stubs" -LA ..
-      - name: Build (default, CUDA)
-        run: |
-          cd build
-          make -j2
-      - name: Strip binary (default)
-        if: matrix.CUDA == '0'
-        run: |
-          cd build
-          strip src/FIRESTARTER
-      - name: Strip binary (CUDA)
-        if: matrix.CUDA != '0'
-        run: |
-          cd build
-          strip src/FIRESTARTER_CUDA
-      - name: Test FIRESTARTER (default)
-        if: matrix.CUDA == '0'
-        run: ./build/src/FIRESTARTER -t 1
-      - uses: actions/upload-artifact@v4
-        if: matrix.compiler == 'g++-10' && matrix.CUDA == '0'
-        with:
-          name: FIRESTARTER-linux
-          path: build/src/FIRESTARTER
-      - uses: actions/upload-artifact@v4
-        if: matrix.compiler == 'g++-10' && matrix.CUDA != '0'
-        with:
-          name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
-          path: build/src/FIRESTARTER_CUDA
-
-  uninstall-cuda:
-    
-    needs: ['build-linux-cuda']
-
+  build-linux:
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04]
-
-    runs-on: ${{ matrix.os }}
-
-    env:
-      CUDA_ROOT: '/usr/local/cuda'
-
-    steps:
-    - name: Delete CUDA stuff
-      run: |
-        sudo rm -rf ${CUDA_ROOT}
-
-  install-oneapi:
-    needs: ['uninstall-cuda']
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
+        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
         ONEAPI: ['2023.2.0', '2024.0']
-
-    steps:
-    - name: Install OneAPI Base-Toolkit (if needed)
-      run: |
-        wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
-        echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
-        sudo apt update
-        sudo apt install intel-basekit-${{ matrix.ONEAPI }}
-#        sudo apt install intel-oneapi-compiler-dpcpp-cpp-${{ matrix.ONEAPI }} intel-oneapi-mkl-${{ matrix.ONEAPI }} intel-oneapi-common-vars
-
-  build-linux-oneapi:
-    
-    needs: ['install-oneapi']
-
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-20.04]
-        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
-        ONEAPI: ['0', '2023.2.0', '2024.0']
 
     runs-on: ${{ matrix.os }}
 
@@ -240,6 +45,13 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: '0'
+    - name: Install OneAPI Base-Toolkit (if needed)
+      if: matrix.ONEAPI != '0'
+      run: |
+        wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
+        echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+        sudo apt update
+        sudo apt install intel-basekit-${{ matrix.ONEAPI }}
     - name: Create build directory
       run: |
         mkdir build
@@ -282,6 +94,142 @@ jobs:
       with:
         name: FIRESTARTER_ONEAPI_${{ matrix.ONEAPI }}-linux
         path: build/src/FIRESTARTER_ONEAPI
+
+  build-linux-2:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-20.04]
+        compiler: [g++-7, g++-8, g++-9, g++-10, clang++-8, clang++-9, clang++-10]
+        CUDA: ['0', '8.0', '11.0']
+
+    runs-on: ${{ matrix.os }}
+
+    env:
+      CUDA_ROOT: '/usr/local/cuda'
+
+    steps:
+    - name: Install g++-7 (if needed)
+      if: matrix.compiler == 'g++-7'
+      run: |
+        sudo apt install g++-7
+    - name: Install g++-8 (if needed)
+      if: matrix.compiler == 'g++-8'
+      run: |
+        sudo apt install g++-8
+    - name: Install clang++-8 (if needed)
+      if: matrix.compiler == 'clang++-8'
+      run: |
+        sudo apt install clang-8
+    - name: Install clang++-9 (if needed)
+      if: matrix.compiler == 'clang++-9'
+      run: |
+        sudo apt install clang-9
+    - name: Install clang++-10 (if needed)
+      if: matrix.compiler == 'clang++-10'
+      run: |
+        sudo apt install clang-10
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: '0'
+    - name: Install CUDA runtime (if needed)
+      if: matrix.CUDA != '0'
+      run: |
+        case ${{ matrix.CUDA }} in
+          8.0)
+            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/local_installers/cuda_8.0.61_375.26_linux-run
+            wget https://developer.nvidia.com/compute/cuda/8.0/Prod2/patches/2/cuda_8.0.61.2_linux-run
+            sudo sh cuda_8.0.61_375.26_linux-run --extract=${CUDA_ROOT}
+            sudo sh ${CUDA_ROOT}/cuda-linux64-rel-8.0.61-21551265.run --tar mxvf -C ${CUDA_ROOT}
+            sudo sh cuda_8.0.61.2_linux-run --accept-eula --silent --installdir=${CUDA_ROOT}
+            rm cuda_8.0.61_375.26_linux-run
+            rm cuda_8.0.61.2_linux-run
+            ;;
+          11.0)
+            wget https://developer.download.nvidia.com/compute/cuda/11.0.3/local_installers/cuda_11.0.3_450.51.06_linux.run
+            sudo sh cuda_11.0.3_450.51.06_linux.run --toolkit --toolkitpath=${CUDA_ROOT} --override --silent
+            rm cuda_11.0.3_450.51.06_linux.run
+            ;;
+          NVHPC-22.5)
+            wget https://developer.download.nvidia.com/hpc-sdk/22.5/nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            tar xpzf nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            rm nvhpc_2022_225_Linux_x86_64_cuda_11.7.tar.gz
+            sudo NVHPC_SILENT="true" NVHPC_INSTALL_DIR="$CUDA_ROOT" NVHPC_INSTALL_TYPE="single" ./nvhpc_2022_225_Linux_x86_64_cuda_11.7/install
+            rm -rf nvhpc_2022_225_Linux_x86_64_cuda_11.7
+
+        esac
+    - name: Create build directory
+      run: |
+        mkdir build
+    - name: Run CMake configure (default)
+      if: matrix.CUDA == '0'
+      env:
+        CXX: ${{ matrix.compiler }}
+      run: |
+        cd build
+        cmake ..
+    - name: Run CMake configure (CUDA)
+      if: matrix.CUDA != '0' && matrix.CUDA != 'NVHPC-22.5'
+      env:
+        CXX: ${{ matrix.compiler }}
+      run: |
+        export CPATH=${CUDA_ROOT}/include:${CPATH}
+        export LD_LIBRARY_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs:${LD_LIBRARY_PATH}
+        export LIBRARY_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs:${LIBRARY_PATH}
+        export CUDA_LIB_PATH=${CUDA_ROOT}/lib64:${CUDA_ROOT}/lib64/stubs
+        export PATH=${CUDA_ROOT}:${PATH}
+        export CUDA_HOME=${CUDA_ROOT}
+        export CUDA_PATH=${CUDA_ROOT}
+        export CUDAToolkit_ROOT=${CUDA_ROOT}
+
+        cd build
+        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS="-L${CUDA_ROOT}/lib64/stubs/" ..
+    - name: Run CMake configure (CUDA with NVHPC)
+      if: matrix.CUDA == 'NVHPC-22.5'
+      env:
+        CXX: ${{ matrix.compiler }}
+      run: |
+        NVARCH=`uname -s`_`uname -m`; export NVARCH
+        PATH=$CUDA_ROOT/$NVARCH/22.5/compilers/bin:$PATH; export PATH
+        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/compilers/lib:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+        LD_LIBRARY_PATH=$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs:$LD_LIBRARY_PATH; export LD_LIBRARY_PATH
+
+        cd build
+        cmake -DFIRESTARTER_BUILD_TYPE="FIRESTARTER_CUDA" -DCMAKE_EXE_LINKER_FLAGS=-L"$CUDA_ROOT/$NVARCH/22.5/cuda/11.7/lib64/stubs" -LA ..
+    - name: Build (default, CUDA)
+      run: |
+        cd build
+        make -j2
+    - name: Strip binary (default)
+      if: matrix.CUDA == '0'
+      run: |
+        cd build
+        strip src/FIRESTARTER
+    - name: Strip binary (CUDA)
+      if: matrix.CUDA != '0'
+      run: |
+        cd build
+        strip src/FIRESTARTER_CUDA
+    - name: Test FIRESTARTER (default)
+      if: matrix.CUDA == '0'
+      run: ./build/src/FIRESTARTER -t 1
+    - uses: actions/upload-artifact@v4
+      if: matrix.compiler == 'g++-10' && matrix.CUDA == '0'
+      with:
+        name: FIRESTARTER-linux
+        path: build/src/FIRESTARTER
+    - uses: actions/upload-artifact@v4
+      if: matrix.compiler == 'g++-10' && matrix.CUDA != '0'
+      with:
+        name: FIRESTARTER_CUDA_${{ matrix.CUDA }}-linux
+        path: build/src/FIRESTARTER_CUDA
+      
   build-windows:
     strategy:
       fail-fast: false
@@ -420,7 +368,7 @@ jobs:
   create-download:
     name: Create download for Website
     runs-on: ubuntu-latest
-    needs: [build-linux-cuda, build-macos, build-windows, build-linux-oneapi]
+    needs: [build-linux, build-linux-2, build-macos, build-windows]
     steps:
     - uses: actions/checkout@v4
       with:
